guides/v2.1/cloud/docker/docker-development-testing.md
---
group: cloud-guide
title: Functional testing in Docker
functional_areas:
  - Cloud
  - Docker
  - Configuration
---

You can use the `{{site.data.var.ct}}` package to run functional tests in the Docker environment. Functional tests are in the `src/Test/Functional/Acceptance` folder. See an example in the [ece-tools repository](https://github.com/magento/ece-tools/tree/develop/src/Test/Functional/Acceptance).

## Prerequisites

Before you run functional tests, you must prepare your environment with the following steps.

1.  Stop all services that use the following ports:

    -  `80`—varnish
    -  `443`—web, tls
    -  `3306`—apache, mysql

1.  Switch to the preferred PHP version for running tests.

1.  Update the project dependencies.

    ```bash
    composer update
    ```

1.  Add credentials to the Docker environment.

    ```bash
    echo "COMPOSER_MAGENTO_USERNAME=your_public_key" >> ./.docker/composer.env
    ```

    ```bash
    echo "COMPOSER_MAGENTO_PASSWORD=your_private_key" >> ./.docker/composer.env
    ```

## Run tests

The `codeception.dist.yml` file contains the global testing configuration and is located in the `{{site.data.var.ct}}` root directory. See it in the [`{{site.data.var.ct}}` repository](https://github.com/magento/ece-tools/blob/develop/codeception.dist.yml).

By default, the functional tests produce a short output. If you need a more detailed output, you can edit the `codeception.dist.yml` file and set the `printOutput:` property to `true`. 

```yaml
modules:
  config:
    Magento\MagentoCloud\Test\Functional\Codeception\Docker:
      ...
      printOutput: true
```
{:.no-copy}

### Run a specific test

Use the following format to run a specific functional test:

```bash
./vendor/bin/codecept run Acceptance <TestName>Cest
```

For example, the following test verifies that the post-deploy task runs successfully.

```bash
./vendor/bin/codecept run Acceptance PostDeployCest
```

Sample response:

```terminal
Codeception PHP Testing Framework v2.5.6
Powered by PHPUnit 6.5.14 by Sebastian Bergmann and contributors.
Running with seed:
Acceptance Tests (1) -----------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------
PostDeployCest: Test post deploy | {"ADMIN_EMAIL":"admin@example.com"}
 [Magento\MagentoCloud\Test\Functional\Robo\Tasks\GenerateDockerCompose] Running ./bin/ece-tools docker:build 
 --mode=functional --php=7.2
...
...
✔ PostDeployCest: Test post deploy | {"ADMIN_EMAIL":"admin@example.com"} (210.41s)
```
{: .no-copy}

### Run all tests

There is a different script or set of scripts to run all available tests for each version of PHP.

-  **PHP 7.0**

    ```bash
    ./vendor/bin/codecept run -g php70 --steps
    ```

-  **PHP 7.1**

    ```bash
    ./vendor/bin/codecept run -g php71 --steps
    ```

-  **PHP 7.2**

    ```bash
    ./tests/travis/prepare_functional_parallel.sh
    ```

    ```bash
    ./vendor/bin/codecept run -g php72parallel_1 --steps
    ```

    ```bash
    ./vendor/bin/codecept run -g php72parallel_2 --steps
    ```

    ```bash
    ./vendor/bin/codecept run -g php72parallel_3 --steps
    ```
